# TerraCore

./: ARCHITECTURE.md  BLOCKCHAIN_INFO.md  CHANGELOG.md  PHAM_BLOCKCHAIN_LOG.md  README.md  SIGNATURE.sha256  pyproject.toml
terra_core/: __init__.py  terra_agent.py
terra_core/atmosphere/: __init__.py  atmosphere_engine.py  gas_cycle.py
terra_core/audit/: __init__.py  terra_chain.py
terra_core/biosphere/: __init__.py  nitrogen_cycle.py  photosynthesis.py
terra_core/bridge/: __init__.py  brain_core.py  fusion_core.py
terra_core/contracts/: __init__.py  schemas.py
terra_core/hydrosphere/: __init__.py  water_cycle.py
terra_core/regulator/: __init__.py  homeostasis.py  radiation_shield.py
terra_core/safety/: __init__.py  abort_system.py  omega_monitor.py
terra_core/synthesis/: __init__.py  cno_cycle.py  pp_chain.py  synthesis_engine.py  triple_alpha.py
tests/: __init__.py  test_public_api.py  test_terra_core.py
